crates/credential/tests/probes/credential_properties_schema_removed.stderr
error[E0576]: cannot find method or associated constant `properties_schema` in trait `Credential`
  --> tests/probes/credential_properties_schema_removed.rs:14:43
   |
14 |     let _ = <NoCredential as Credential>::properties_schema();
   |                                           ^^^^^^^^^^^^^^^^^ not found in `Credential`
